src/snapshots/treetop_core__engine__tests__test_evaluate_requests__alice_edit_allow.snap
---
source: src/engine.rs
expression: decision
---
{
  "Allow": {
    "policies": [
      {
        "literal": "permit (\n    principal == User::\"alice\",\n    action in [Action::\"view\", Action::\"edit\", Action::\"delete\"],\n    resource == Photo::\"VacationPhoto94.jpg\"\n);",
        "json": {
          "effect": "permit",
          "principal": {
            "op": "==",
            "entity": {
              "type": "User",
              "id": "alice"
            }
          },
          "action": {
            "op": "in",
            "entities": [
              {
                "type": "Action",
                "id": "view"
              },
              {
                "type": "Action",
                "id": "edit"
              },
              {
                "type": "Action",
                "id": "delete"
              }
            ]
          },
          "resource": {
            "op": "==",
            "entity": {
              "type": "Photo",
              "id": "VacationPhoto94.jpg"
            }
          },
          "conditions": []
        },
        "annotation_id": null,
        "cedar_id": "policy0"
      }
    ],
    "version": {
      "hash": "367a1bf718b961945a55eb68ef47778eab2db0ed787476147c9a77dd83833686",
      "loaded_at": "[timestamp]"
    }
  }
}
